<resources>
    <string name="app_name">Transpoter</string>
    <string name="title_activity_thongtin">Map</string>
    <string name="GiaSP">Gia San Pham</string>
    <string name="namedull">Thêm vào giỏ hàng</string>
    <string name="Name">Tên san pham</string>
    <string name="Exi">Mô tả Laptop</string>
    <string name="adress">nhập vào địa chỉ của bạn</string>
    <string name="Exiphone">Mô tả Điện Thoại</string>
    <string name="infor">Thông Tin Khách Hàng</string>
    <string name="sp">Loai san pham</string>
    <string name="emal">nhập vào Email</string>
    <string name="tenhn">Tên Hàng </string>
    <string name="gia">Giá Món Hàng</string>
    <string name="tru">-</string>
    <string name="so">1</string>
    <string name="cong">+</string>
<string name="namecreate">nhập tên của bạn</string>
    <string name="namecreatechat">nhập nội dung chat</string>
    <string name="chating">chat</string>
    <string name="sigup">đăng ký</string>
    <string name="dk">Tài Khoản</string>
    <string name="dt">093908814</string>
    <string name="pas">Mật Khẩu </string>
    <string name="remeber">Nhớ Tài Khoản </string>
    <string name="create">Tạo Tài Khoản</string>
    <string name="creatername">Đăng Nhập</string>
    <string name="dknam">nhập tài khoản</string>
    <string name="mail">thanhnhadev@gmail.com</string>
    <string name="phonecall">Gọi</string>
    <string name="phone">Số điện thoại</string>
    <string name="Dc">Địa chỉ:</string>
    <string name="login">Đăng nhập</string>
    <string name="logout">Đăng Xuất</string>
    <string name="total">Tổng Tiền :</string>
    <string name="giatotal">Giá trị Tiền</string>
    <string name="pass1">nhập vào Mật Khẩu </string>
    <string name="pass">nhập lại Mật Khẩu </string>
    <string name="phonenem">nhập vào số điện thoại </string>
    <string name="dkname">Đăng Ký</string>
    <string name="dkemal">Nhập Vào Email </string>
    <string name="passold">Nhập mật khẩu cũ</string>
    <string name="passnew">Nhập mật khẩu mới</string>
    <string name="pasworknewold"> Nhập lại mật khẩu mới </string>
    <string name="change">Thay đổi mật khẩu </string>
</resources>
