<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:weightSum="10"
    android:layout_height="match_parent">
    <LinearLayout
        android:gravity="center"
        android:layout_margin="5dp"
        android:layout_weight="3"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/hinh_giohang"
            android:layout_width="109dp"
            android:layout_height="114dp"
            android:layout_margin="5dp"
            android:adjustViewBounds="true" />
    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_margin="5dp"
        android:layout_weight="7"
        android:layout_width="0dp"
        android:orientation="vertical"
        android:layout_height="wrap_content">



        <TextView
            android:textColor="#111"
            android:text="@string/tenhn"
            android:textSize="25sp"
            android:id="@+id/ten_ghang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:gravity="center"
            android:layout_marginTop="3dp"
            android:textColor="#111"
            android:id="@+id/gia_ghang"
            android:text="@string/GiaSP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:background="@drawable/spinner"
                android:focusable="false"
                android:text="@string/tru"
                android:id="@+id/BT_giamslghang"
                android:layout_marginTop="5dp"
                android:textSize="30sp"
                android:layout_width="70dp"
                android:layout_height="wrap_content" />
            <Button
                android:background="@null"
                android:focusable="false"
                android:text="@string/so"
                android:id="@+id/BT_giatrighang"
                android:layout_marginTop="5dp"
                android:textSize="30sp"
                android:layout_width="70dp"
                android:layout_height="wrap_content" />
            <Button
                android:background="@drawable/spinner"
                android:focusable="false"
                android:text="@string/cong"
                android:id="@+id/BT_tangghang"
                android:layout_marginTop="5dp"
                android:textSize="30sp"
                android:layout_width="70dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>



</LinearLayout>