<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_chat"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/nau"
        app:titleTextColor="@color/gray_white"
        app:title="Nhắn tin với cửa hàng">
    </android.support.v7.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout

            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <EditText
                    android:id="@+id/name_chat"
                    android:hint="@string/namecreate"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/signin_chat"
                    android:layout_gravity="center"
                    android:text="@string/sigup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <ListView
                android:visibility="gone"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/signin_chat"
                android:id="@+id/list_chat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ListView
                android:id="@+id/list_chating"
                android:layout_width="wrap_content"
                android:layout_height="420dp"
                android:layout_below="@+id/signin_chat"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true" />
            <LinearLayout
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <EditText
                    android:id="@+id/name_chating"
                    android:hint="@string/namecreatechat"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/signin_chating"
                    android:layout_gravity="center"
                    android:text="@string/chating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>