<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"

    android:layout_height="wrap_content"
    android:id="@+id/ll_itemSP"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.v7.widget.CardView
    app:cardCornerRadius="4dp"
    app:cardBackgroundColor="#fbf8f8"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:background="@drawable/spinergray"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_margin="2dp"
            android:adjustViewBounds="true"
            android:id="@+id/igm_dienthoai"
            android:layout_width="100dp"
            android:layout_height="100dp" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:id="@+id/tensp_dienthoai"
                android:textColor="#055097"
                android:text="@string/Name"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:textSize="18sp"
                android:layout_margin="5dp"
                android:textColor="#bf07f2"
                android:id="@+id/Gia_dienthoai"
                android:text="@string/GiaSP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/Mota_dienthoai"
                android:layout_margin="5dp"
                android:textColor="#111"
                android:text="@string/Exiphone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
</LinearLayout>