<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.LienheActivity">

        <android.support.v7.widget.Toolbar
            app:titleTextColor="@color/whote"
            android:background="#8e8c8b"
            app:title="Tài Khoản"
            android:id="@+id/tb_back_lh"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

        </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_gravity="center"
            android:background="@drawable/express"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView

                android:textSize="30dp"
                android:layout_marginTop="10dp"
                android:textColor="#111"
                android:text="@string/infor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout

                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:textSize="20dp"
                        android:textColor="@color/back"
                        android:text="Email:"
                        android:id="@+id/account_tk"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" />
                    <TextView
                        android:id="@+id/name_tk"
                        android:textColor="@color/back"
                        android:textSize="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:textSize="20dp"
                        android:textColor="@color/back"
                        android:text="@string/phone"
                        android:id="@+id/account_sdt"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" />
                    <TextView
                        android:id="@+id/phone_tk"
                        android:textColor="@color/back"
                        android:textSize="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:textSize="20dp"
                        android:textColor="@color/back"
                        android:text="@string/Dc"
                        android:id="@+id/account_address"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" />
                    <TextView
                        android:id="@+id/ddress"
                        android:textColor="@color/back"
                        android:textSize="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>

                <Button
                    android:layout_marginTop="10dp"
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/spinner"
                    android:text="@string/login" />
                <Button
                    android:layout_marginTop="10dp"
                    android:background="@drawable/spinner"
                    android:id="@+id/btn_logout"
                    android:text="@string/logout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>


        </ScrollView>
    </LinearLayout>
</LinearLayout>